# BERT_DEMO_MNN

./: public.libraries.txt  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/ftpipehd_mnn/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  MnistDataset.cpp  native-lib.cpp
app/src/main/cpp/datasets/: Conll2003Dataset.cpp
app/src/main/cpp/datasets/include/: Conll2003Dataset.h
app/src/main/cpp/globalStates/: commonStates.cpp
app/src/main/cpp/globalStates/include/: commonStates.h
app/src/main/cpp/mnn/include/MNN/expr/: Executor.hpp  Expr.hpp
app/src/main/cpp/mnn/include/datasets/: Conll2003Dataset.cpp  Conll2003Dataset.hpp
app/src/main/cpp/mnn/include/demo/: BERTGradTest.cpp  BERTParallelTest.cpp  BERTTest.cpp  BertUtils.cpp  BertUtils.hpp  demoMain.cpp
app/src/main/cpp/mnn/include/models/: BERT.cpp  BERT.hpp  BERTEmbedding.cpp  BERTEmbedding.hpp  BERTLayer.cpp  BERTLayer.hpp  BERTTokenizer.cpp  MEmbedding.cpp  MLayerNorm.cpp  SubModel.cpp  SubModel.hpp
app/src/main/cpp/models/: BERT.cpp  MobileViT.cpp  MobilenetV2.cpp  model.cpp
app/src/main/cpp/models/include/: BERT.h  MobileNetV2.h  MobileViT.h  SubModel.h  model.h
app/src/main/cpp/modules/: BERTEmbedding.cpp  BERTLayer.cpp  BERTTokenizer.cpp  MEmbedding.cpp  MLayerNorm.cpp  MTransformer.cpp
app/src/main/cpp/modules/include/: BERTTokenizer.h  MEmbedding.h  MLayerNorm.h  MTransformer.h
app/src/main/cpp/utils/: datasets.cpp  general.cpp  jniUtils.cpp  singleTrain.cpp
app/src/main/cpp/utils/include/: datasets.h  general.h  jniUtils.h  log.h  singleTrain.h
app/src/main/java/com/example/ftpipehd_mnn/: MainActivity.java
app/src/main/java/com/example/ftpipehd_mnn/datasets/: Dataset.java
app/src/main/java/com/example/ftpipehd_mnn/globalStates/: Backend.java  Common.java  Config.java  Training.java
app/src/main/java/com/example/ftpipehd_mnn/models/: Model.java
app/src/main/java/com/example/ftpipehd_mnn/utils/: CustomView.java  General.java  TrainSingle.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/raw/: bert_config.yml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/ftpipehd_mnn/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
